fix: confetti z-index

--- a/assets/index.css
+++ b/assets/index.css
@@ -28,7 +28,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: 2;
+    z-index: 3;
 }
 
 .overlay {
